--- a/Test.ipynb
+++ b/Test.ipynb
@@ -17,14 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "arr = np.loadtxt('data_vector.csv').astype(int)\n",
-    "\n",
-    "a1 = list(arr.copy())\n",
-    "\n",
-    "\n"
+    "a1 = list(arr.copy())"
    ]
   },
   {
@@ -36,8 +30,6 @@
     "vec = []\n",
     "\n",
     "listas_total = []\n",
-    "\n",
-    "\n",
     "\n",
     "index_ini = 0\n",
     "\n",
@@ -127,9 +119,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "engine = sqlalchemy.create_engine('mysql+pymysql://root:jorge@localhost/mysql')\n",
     "\n",
     "data.to_sql(con=engine,name=\"jorge_prueba\",if_exists=\"replace\")"
@@ -251,62 +240,6 @@
    "source": [
     "pd.read_sql('select * from jorge_prueba limit 100', con=engine)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(map(sum,listas_total))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_39796\\1332099679.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'subvectores'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mlistas_total\u001b[0m \u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "data = pd.DataFrame({'subvectores':listas_total })"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
